--- a/app/src/main/res/layout/item_phone_recent_history.xml
+++ b/app/src/main/res/layout/item_phone_recent_history.xml
@@ -19,12 +19,12 @@
             android:id="@+id/profile"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/todo_circle"/>
+            android:src="@drawable/ic_call_profile_24"/>
     
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             android:orientation="vertical"
             android:gravity="start|center_vertical">
     
@@ -45,13 +45,13 @@
                     android:id="@+id/status_image"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
-                    android:src="@drawable/todo_circle"/>
+                    android:src="@drawable/ic_incoming_call_24"/>
     
                 <TextView
                     android:id="@+id/status_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
+                    android:layout_marginStart="6dp"
                     android:text="휴대전화"
                     android:textSize="12sp"/>
     
@@ -69,7 +69,7 @@
                 android:id="@+id/mic"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
-                android:src="@drawable/todo_circle"/>
+                android:src="@drawable/ic_mic_24"/>
     
             <TextView
                 android:id="@+id/time"
@@ -111,7 +111,7 @@
                 android:id="@+id/call_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_call_green_24"
                 android:scaleType="centerInside"
                 android:background="@drawable/black_circle"/>
 
@@ -120,7 +120,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_message_circle_blue_24"
                 android:scaleType="centerInside"
                 android:background="@drawable/black_circle"/>
 
@@ -129,7 +129,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_video_green_24"
                 android:scaleType="centerInside"
                 android:background="@drawable/black_circle"/>
 
@@ -138,7 +138,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_marginStart="32dp"
-                android:src="@drawable/todo_circle"
+                android:src="@drawable/ic_info_24"
                 android:scaleType="centerInside"
                 android:background="@drawable/black_circle"/>
 
