[feat][fix] 카카오톡, 환경 설정 교육 마무리, 교육 진행 버그 수정

--- a/app/src/main/res/layout/activity_setting2_font.xml
+++ b/app/src/main/res/layout/activity_setting2_font.xml
@@ -8,6 +8,10 @@
     android:background="#F6F6F6"
     tools:context=".MainActivity">
 
+    <com.sungkyul.synergy.utils.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <ImageButton
         android:id="@+id/font_back_button"
