--- a/app/src/main/res/layout/activity_kakao_chatting.xml
+++ b/app/src/main/res/layout/activity_kakao_chatting.xml
@@ -129,7 +129,9 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="10dp"
                     android:src="@drawable/ic_add_black_24"/>
+
                 <EditText
+                    android:id="@+id/message_edit_text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
