--- a/app/src/main/res/layout/activity_kakao_main.xml
+++ b/app/src/main/res/layout/activity_kakao_main.xml
@@ -8,17 +8,6 @@
     tools:context=".edu_space.kakaotalk.activity.KakaoMainActivity"
     android:background="@color/white">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/kakaoNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:itemBackground="@color/white"
-        app:itemIconTint="@drawable/menu_click_color"
-        app:itemTextColor="@drawable/menu_click_color"
-        app:menu="@menu/kakao_navi_menu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:ignore="MissingConstraints"/>
-
     <FrameLayout
         android:id="@+id/kakaoMainFrameLayout"
         android:layout_width="0dp"
@@ -27,6 +16,162 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/kakaoNavigationView" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/kakaoNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="4dp"
+        app:layout_constraintTop_toBottomOf="@id/kakaoMainFrameLayout"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/friend_group"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/chatting_group">
+
+            <ImageButton
+                android:id="@+id/friend_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="8dp"
+                android:src="@drawable/ic_person_black_24dp"
+                android:scaleType="centerInside"
+                android:background="@null"
+                android:contentDescription="@null"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="@string/friend"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/chatting_group"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/friend_group"
+            app:layout_constraintEnd_toStartOf="@id/openchatting_group">
+
+            <ImageButton
+                android:id="@+id/chatting_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="0dp"
+                android:src="@drawable/baseline_chat_bubble_24"
+                android:scaleType="centerInside"
+                android:background="@null"
+                android:contentDescription="@null"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="@string/chatting"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/openchatting_group"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/chatting_group"
+            app:layout_constraintEnd_toStartOf="@id/shopping_group">
+
+            <ImageButton
+                android:id="@+id/openchatting_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="8dp"
+                android:src="@drawable/baseline_mark_chat_unread_24"
+                android:scaleType="centerInside"
+                android:background="@null"
+                android:contentDescription="@null"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="@string/openchatting"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/shopping_group"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/openchatting_group"
+            app:layout_constraintEnd_toStartOf="@id/more_group">
+
+            <ImageButton
+                android:id="@+id/shopping_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="6dp"
+                android:src="@drawable/ic_kakao_shopping_bag_24dp"
+                android:scaleType="centerInside"
+                android:background="@null"
+                android:contentDescription="@null"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="@string/shopping"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/more_group"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/shopping_group"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageButton
+                android:id="@+id/more_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:padding="6dp"
+                android:src="@drawable/ic_kakao_morehoriz_black_24dp"
+                android:scaleType="centerInside"
+                android:background="@null"
+                android:contentDescription="@null"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="@string/more"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.sungkyul.synergy.utils.EduScreen
         android:id="@+id/edu_screen"
