[feat] 전화, 계정생성 교육 업로드

--- a/app/src/main/res/layout/activity_default_phone_call.xml
+++ b/app/src/main/res/layout/activity_default_phone_call.xml
@@ -8,6 +8,11 @@
     android:background="@drawable/bg_default_call"
     tools:context=".edu_space.default_app.activity.DefaultPhoneCallActivity">
 
+    <com.sungkyul.synergy.utils.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <ImageView
         android:id="@+id/white_background"
         android:layout_width="match_parent"
