--- a/app/src/main/res/layout/activity_google_main.xml
+++ b/app/src/main/res/layout/activity_google_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
+    <com.sungkyul.synergy.utils.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <!-- Google 메뉴(짝대기 세개) 이미지 -->
     <ImageView
         android:id="@+id/google_menu"
