--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,6 +60,7 @@
     <color name="message_profile_name">#252525</color>
     <color name="message_screen_bg">#FCFCFC</color>
     <color name="message_time">#737373</color>
+    <color name="message_selection">#3EB2DD</color>
 
     <color name="message_chatting_bg">#F2F2F2</color>
     <color name="message_chatting_item_bg">#FCFCFC</color>
