--- a/app/src/main/res/layout/activity_icon_detail.xml
+++ b/app/src/main/res/layout/activity_icon_detail.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,18 +6,51 @@
     android:background="@color/bgColor1">
 
     <LinearLayout
-        android:layout_marginTop="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="0dp"
         android:orientation="vertical">
 
-    <include layout="@layout/fragment_icon_toolbar"/>
+        <include layout="@layout/fragment_icon_toolbar" />
 
-        <include layout="@layout/fragment_icon_detail"/>
+        <LinearLayout
+            android:id="@+id/itemView"
+            android:layout_width="match_parent"
+            android:layout_height="550dp"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:background="@drawable/round_corner_white_2"
+            android:layout_marginTop="7dp">
+
+            <TextView
+                android:id="@+id/icon_tv_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="36dp"
+                android:fontFamily="@font/pretendard_extrabold"
+                android:text="음량 조절"
+                android:layout_marginTop="20dp"/>
+
+            <ImageView
+                android:id="@+id/icon_detail_iv"
+                android:layout_width="147dp"
+                android:layout_height="147dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/icon_tv_2" />
+
+
+            <TextView
+                android:id="@+id/another_icon_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="test"
+                android:textStyle="bold"
+                android:padding="5dp"
+                android:textSize="30sp"
+                android:layout_gravity="center"
+                />
+
+
+        </LinearLayout>
     </LinearLayout>
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
