--- a/app/src/main/res/layout/activity_default_phone_call.xml
+++ b/app/src/main/res/layout/activity_default_phone_call.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/bg_default_call"
     tools:context=".edu_space.default_app.activity.DefaultPhoneCallActivity">
 
-    <com.sungkyul.synergy.utils.EduScreen
+    <com.sungkyul.synergy.utils.edu.EduScreen
         android:id="@+id/edu_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
