--- a/app/src/main/res/layout/activity_setting2_font.xml
+++ b/app/src/main/res/layout/activity_setting2_font.xml
@@ -8,7 +8,7 @@
     android:background="#F6F6F6"
     tools:context=".MainActivity">
 
-    <com.sungkyul.synergy.utils.EduScreen
+    <com.sungkyul.synergy.utils.edu.EduScreen
         android:id="@+id/edu_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
