--- a/app/src/main/res/layout/activity_foodmenu.xml
+++ b/app/src/main/res/layout/activity_foodmenu.xml
@@ -7,6 +7,11 @@
     android:background="#FFFFFF"
     tools:context=".edu_space.delivery.foodmenuActivity">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <View
         android:id="@+id/view15"
         android:layout_width="wrap_content"
