--- a/app/src/main/res/layout/activity_naver_search.xml
+++ b/app/src/main/res/layout/activity_naver_search.xml
@@ -8,6 +8,11 @@
     tools:context=".edu_space.naver.activity.NaverSearchActivity"
     android:background="@color/naver_search_bg">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <LinearLayout
         android:id="@+id/search_bar"
         android:orientation="horizontal"
