--- a/app/src/main/res/layout/activity_pay_dactivity.xml
+++ b/app/src/main/res/layout/activity_pay_dactivity.xml
@@ -7,6 +7,11 @@
     android:background="#E4E4E4"
     tools:context=".edu_space.delivery.payDActivity">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <View
         android:id="@+id/view29"
         android:layout_width="wrap_content"
