--- a/app/src/main/res/layout/activity_res.xml
+++ b/app/src/main/res/layout/activity_res.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".edu_space.ticket.resActivity">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <View
         android:id="@+id/view32"
