--- a/app/src/main/res/layout/activity_taxi_main.xml
+++ b/app/src/main/res/layout/activity_taxi_main.xml
@@ -7,6 +7,10 @@
     android:background="#3F51B5"
     android:orientation="vertical">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/textView31"
