--- a/app/src/main/res/layout/activity_ticket_main.xml
+++ b/app/src/main/res/layout/activity_ticket_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".edu_space.ticket.TicketMainActivity">
 
+    <com.sungkyul.synergy.utils.edu.EduScreen
+        android:id="@+id/edu_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
