--- a/app/src/main/res/layout/fragment_icon_list.xml
+++ b/app/src/main/res/layout/fragment_icon_list.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginRight="24dp"
-    android:layout_marginLeft="24dp"
-    android:layout_marginBottom="17dp">
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginBottom="8dp">
 
     <LinearLayout
         android:id="@+id/itemView"
@@ -32,4 +31,10 @@
             android:fontFamily="@font/pretendard_semibold"
             android:text="음량 조절"/>
     </LinearLayout>
-</LinearLayout>
+
+    <com.sungkyul.synergy.utils.DynamicButton
+        android:id="@+id/edu_button"
+        android:layout_width="match_parent"
+        android:layout_height="108dp"
+        android:translationZ="25dp"/>
+</FrameLayout>
