--- a/app/src/main/res/layout/activity_default_menu2.xml
+++ b/app/src/main/res/layout/activity_default_menu2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,37 +8,7 @@
     android:background="#6B6B6B"
     tools:context=".edu_space.default_app.activity.DefaultHomeActivity">
 
-    <!-- 좌우 스크롤 가능한 레이아웃 -->
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
-
-        <!-- 메뉴 항목들을 담을 가로 방향 LinearLayout -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <!-- 메뉴 항목들을 추가 -->
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/sliderViewPager"
-                android:layout_width="390dp"
-                android:layout_height="170dp"
-                android:layout_marginBottom="304dp">
-
-
-            </androidx.viewpager2.widget.ViewPager2>
-
-
-            <!-- 추가적인 메뉴 항목들을 필요한 만큼 계속해서 추가 -->
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
+    <!-- AppBarLayout -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -78,6 +49,7 @@
                 app:srcCompat="@drawable/toolbar" />
         </LinearLayout>
 
+        <!-- Toolbar -->
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -87,6 +59,38 @@
             app:titleTextColor="#000000" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- NestedScrollView -->
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">
+
+        <!-- 메뉴 항목들을 담을 가로 방향 LinearLayout -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imageView50"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/menu" />
+
+
+            </FrameLayout>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
     <!-- 이미지 버튼 레이아웃 -->
     <LinearLayout
@@ -126,7 +130,5 @@
             android:src="@drawable/screenedu_back" />
 
     </LinearLayout>
-
-    <!-- 이미지 -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
