2강 용어설명

--- a/app/src/main/res/layout/activity_icon_edu.xml
+++ b/app/src/main/res/layout/activity_icon_edu.xml
@@ -31,8 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_semibold"
-                android:text="아이콘 교육"
-                android:textSize="24sp"
+                android:text="2강 용어사전"
+                android:textSize="28sp"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,9 +44,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_semibold"
-                android:text="모르는 아이콘에 대해 학습하세요"
-                android:textSize="24sp"
+                android:text="모르는 용어에 대해 학습해보세요."
+                android:textSize="22sp"
                 android:textColor="#E1E1E1"
+                android:letterSpacing="-0.01"
                 app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="7dp"
