--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,7 @@
     <!-- 교육 -->
     <color name="eduColor1">#52A669</color>
     <color name="eduColor2">#7EAA64</color>
+    <color name="eduColor3">#089156</color>
     <!-- 실습 -->
     <color name="practiceColor1">#D25A5A</color>
     <!-- 내 -->
