--- a/app/src/main/res/layout/activity_icon_detail.xml
+++ b/app/src/main/res/layout/activity_icon_detail.xml
@@ -28,8 +28,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_semibold"
-                android:text="아이콘 교육"
-                android:textSize="24sp"
+                android:text="2강 용어사전"
+                android:textSize="28sp"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -41,9 +41,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_semibold"
-                android:text="모르는 아이콘에 대해 학습하세요"
-                android:textSize="24sp"
+                android:text="모르는 용어에 대해 학습해보세요."
+                android:textSize="22sp"
                 android:textColor="#E1E1E1"
+                android:letterSpacing="-0.01"
                 app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="7dp"
@@ -95,8 +96,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="36dp"
-                android:fontFamily="@font/pretendard_extrabold"
-                android:text="음량 조절"
+                android:fontFamily="@font/pretendard_semibold"
+                android:textColor="@color/black"
+                android:text="와이파이(WIFI)"
+                android:letterSpacing="-0.05"
                 android:layout_marginTop="20dp"/>
 
             <ImageView
@@ -104,17 +107,22 @@
                 android:layout_width="147dp"
                 android:layout_height="147dp"
                 android:layout_marginTop="10dp"
+                android:background="@color/light_grey"
                 app:layout_constraintTop_toBottomOf="@id/icon_tv_2" />
 
 
             <TextView
                 android:id="@+id/another_icon_iv"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="test"
-                android:textStyle="bold"
-                android:padding="5dp"
+                android:layout_height="match_parent"
+                android:text="text"
+                android:fontFamily="@font/pretendard_regular"
+                android:textColor="@color/black"
+                android:letterSpacing="-0.03"
+                android:padding="10dp"
+                android:layout_margin="10dp"
                 android:textSize="30sp"
+                android:background="@color/bgColor3"
                 android:layout_gravity="center"
                 />
 
