--- a/app/src/main/res/layout/activity_default_menu.xml
+++ b/app/src/main/res/layout/activity_default_menu.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    android:id="@+id/rootLayout"
     tools:context=".edu_space.default_app.activity.DefaultHomeActivity">
 
     <ImageView
@@ -15,6 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/back1" />
 
     <com.google.android.material.appbar.AppBarLayout
@@ -29,9 +31,9 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:layout_height="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <!-- TextView -->
             <TextView
